log
Wed 08 May 2024 02:44:58 AM UTC: 
 tests:  1|8
total_score: 0/70
037c23a
Wed 08 May 2024 02:46:53 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:15: error: unused variable ‘new’ [-Werror=unused-variable]
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap));
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
3dd0901
Wed 08 May 2024 02:47:36 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
320e6c3
Wed 08 May 2024 02:52:56 AM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:78:75: error: expected ‘:’ before ‘}’ token
   78 |             aux = (tree->lower_than(key, aux->pair->key) == 1) ? aux->left
      |                                                                           ^
      |                                                                           :
   79 |         }
      |         ~                                                                  
Compilation failed
dda9256
Wed 08 May 2024 02:53:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:78:75: error: expected ‘:’ before ‘;’ token
   78 |             aux = (tree->lower_than(key, aux->pair->key) == 1) ? aux->left;
      |                                                                           ^
      |                                                                           :
Compilation failed
e78b0b7
Wed 08 May 2024 02:53:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
7372246
Wed 08 May 2024 02:55:32 AM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
a713986
